Updates from ShareLaTeX

--- a/Appendices.tex
+++ b/Appendices.tex
@@ -3,7 +3,7 @@
 
 
 
-\section{Παράρτημα - Node Modules}
+\section{Παράρτημα - Κόμβοι των αθροιστών}
 \label{appendix:Node_modules}
 \begin{table}[H]
 \centering
@@ -137,7 +137,7 @@
     
     
     \end{tabularx}
-    \caption{Modules Description}
+    \caption{Περιγραφή των κόμβων του αναπτύχθηκαν}
     \label{table:node_modules}
 \end{table}
 
@@ -163,7 +163,7 @@
 
 
 \clearpage
-\section{Παράρτημα - Topographical script}
+\section{Παράρτημα - Script τοπογραφικής εκτέλεσης}
 \label{appendix:scripts}
 
 \begin{minted}
