--- a/Ling.tex
+++ b/Ling.tex
@@ -89,7 +89,7 @@
 \subsection{Πλεονεκτήματα της Ling παραγοντοποίησης}
 Ένας αθροιστής Ling βελτιστοποιεί την επίδοση του CLA μειώνοντας κατά ένα το πλήθος 
 εισόδων των λογικών πυλών (fan-in). Όμως αφαιρώντας από κάθε όρο του Group Generate 
-σήματος ένα propagate έχει ως αποτέλεσμα να αυξάνεται η πολυπλοκότητα του τελευταίου 
+σήματος ένα propagate έχει ως αποτέλεσμα την αύξηση της πολυπλοκότητας του τελευταίου 
 σταδίου όπου υπολογίζεται το άθροισμα. 
 Παρατηρείται στην εξίσωση \ref{eq:ling_sum_1} πως πρέπει να υπολογιστεί το $H$, 
 στην συνέχεια να πραγματοποιηθεί η λογική του πράξη AND με το σήμα $p_i$ και τέλος
