--- a/Results.tex
+++ b/Results.tex
@@ -56,7 +56,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 
 \subsection{Τακτική Μεταγλώττισης}
 
-Για λόγους βελτιστοποίησης απαιτείται η κατάλληλη επιλογή της τακτικής μεταγλώττισης (compile strategy) από το εργαλείο σύνθεσης. Το Design Compiler προσφέρει τις παρακάτω επιλογές :
+Για λόγους βελτιστοποίησης απαιτείται κατάλληλη επιλογή της τακτικής μεταγλώττισης (compile strategy) από το εργαλείο σύνθεσης. Το Design Compiler προσφέρει τις παρακάτω επιλογές :
 \begin{itemize}
   \item Top-Down Compilation\\
   Ο υψηλότερος ιεραρχικά σχεδιασμός μεταγλωττίζεται μαζί με τους επιμέρους από τους οποίους αποτελείται.
@@ -1158,5 +1158,5 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 
 \subsection{Συμπεράσματα}
 
-Η χρονική απόδοση υπολογισμού του αθροίσματος υπολοίπου $2^n-1$ στους αθροιστές, που αναπτύχθηκαν στην παρούσα εργασία, είναι θετική στις περισσότερες περιπτώσεις. Εφόσον στις μη-τοπογραφικές μετρήσεις το αποτελέσματα είναι πάντα θετικά, η τελικές προδιαγραφές των Jackson $2^n-1$ που αναπτύχθηκαν εξαρτώνται από την βιβλιοθήκη τεχνολογίας. Όσο μεγαλύτερο το τρανζίστορ της τεχνολογίας, τόσο πιο αμελητέα η αντίσταση των καλωδίων καθώς και άλλων φυσικών παραμέτρων που επηρεάζουν την ταχύτητα. Η χρήση τους είναι κατάλληλη όταν οι περιορισμοί διαθέσιμων πόρων και κατανάλωση ενέργειας είναι ελαστικοί. 
+Η χρονική απόδοση υπολογισμού του αθροίσματος υπολοίπου $2^n-1$ στους αθροιστές, που αναπτύχθηκαν στην παρούσα εργασία, είναι θετική στις περισσότερες περιπτώσεις. Εφόσον στις μη-τοπογραφικές μετρήσεις τα αποτελέσματα είναι πάντα θετικά, η τελικές προδιαγραφές των Jackson $2^n-1$ που αναπτύχθηκαν εξαρτώνται από την βιβλιοθήκη τεχνολογίας. Όσο μεγαλύτερο το τρανζίστορ της τεχνολογίας, τόσο πιο αμελητέα η αντίσταση των καλωδίων καθώς και άλλων φυσικών παραμέτρων που επηρεάζουν την ταχύτητα. Η χρήση τους είναι κατάλληλη όταν οι περιορισμοί διαθέσιμων πόρων και κατανάλωση ενέργειας είναι ελαστικοί. 
 
