--- a/modAdder.tex
+++ b/modAdder.tex
@@ -5,9 +5,9 @@
 \begin{equation*}
     X\ mod\ Y
 \end{equation*}
-Αριθμητικές υπολοίπου είναι χρήσιμες σε ένα μεγάλο πλήθος εφαρμογών εφόσον αποτελούν και 
+Αριθμητικές υπολοίπου είναι χρήσιμες για ένα μεγάλο πλήθος εφαρμογών εφόσον αποτελούν και 
 την βάση για τα Residue Number Systems (RNS). Επίσης αποτελούν μέρος της ψηφιακής
-επεξεργασίας σημάτων και ψηφιακών φίλτρων, κρυπτογραφίας, σε τεχνικές ανίχνευσης και διόρθωσης σφάλματος καθώς και σε υψηλών ταχυτήτων δίκτυα. Η δυαδική άθροιση εκφράζεται μέσω αριθμητική υπολοίπου ως $(A+B)\ mod\ n$, όπου n είναι το πλήθος των δυαδικών ψηφίων των A και B. Στην παρούσα ενότητα θα μελετηθούν οι αθροιστές υπολοίπου $2^n-1$ όπου η επιτάχυνση τους είναι ο σκοπός του παρόν έργου.
+επεξεργασίας σημάτων και ψηφιακών φίλτρων, κρυπτογραφίας, σε τεχνικές ανίχνευσης και διόρθωσης σφάλματος καθώς και σε υψηλών ταχυτήτων δίκτυα. Η δυαδική άθροιση εκφράζεται μέσω αριθμητική υπολοίπου ως $(A+B)\ mod\ 2^n$, όπου n είναι το πλήθος των δυαδικών ψηφίων των A και B. Στην παρούσα ενότητα θα μελετηθούν οι αθροιστές υπολοίπου $2^n-1$ όπου η επιτάχυνση τους είναι ο σκοπός του παρόν έργου.
 
 
 
@@ -126,7 +126,7 @@
 
 
 
-\subsection{Prefix αθροιστές $2^n-1$ }
+\subsection{Προθεματικοί αθροιστές $2^n-1$ }
 % -----------------------------------------------
 % G_{} = τα κρατούμενα του πρώτου επιπέδου 
 % G_{}^' = τα κρατούμενα του δεύτερου επιπέδου
@@ -135,11 +135,11 @@
 και το δεύτερο στάδιο έχει κρατούμενο εισόδου το κρατούμενο εξόδου του πρώτου. Οπότε στο
 πρώτο στάδιο $c_{-1} = 0$. Από την εξίσωση \ref{eq:G'P'_From_GP} συμπεραίνετε πως 
 $(G'_{n-1},P'_{n-1}) = (G_{n-1},P_{n-1})$. Στο δεύτερο επίπεδο ισχύει 
-$c_{-1} = G'_{n-1} = G_{n-1} $ εφόσον στο πρώτο στάδιο το κρατούμενο εισόδου είναι μηδέν.
-Για $c_{-1} = G_{n-1}$ η εξίσωση \ref{eq:G'P'_From_GP} παίρνει την μορφή 
+$c*_{-1} = G'_{n-1} = G_{n-1} $ εφόσον στο πρώτο στάδιο το κρατούμενο εισόδου είναι μηδέν.
+Για $c*_{-1} = G_{n-1}$ η εξίσωση \ref{eq:G'P'_From_GP} παίρνει την μορφή 
 \begin{equation*}
 \begin{split}
-    (G'_{n-1},P'_{n-1}) &= ( G_{n-1} + P_{n-1}*c_{-1} ,  P_{n-1} )\\
+    (G'_{n-1},P'_{n-1}) &= ( G_{n-1} + P_{n-1}*c*_{-1} ,  P_{n-1} )\\
     &=( G_{n-1} + P_{n-1}*G_{n-1} ,  P_{n-1} )\\
     &=(G_{n-1},P_{n-1})
 \end{split}    
@@ -191,9 +191,9 @@ n κόμβους του τελευταίου επιπέδου, όπως εκφρ
 % G_{}^' = τα κρατούμενα του δεύτερου επιπέδου
 % G_{}^* = τα κρατούμενα της νέας αρχιτεκτονικής
 % -----------------------------------------------
-Όπως εξηγήθηκε προηγουμένως το κρατούμενο εισόδου, στο δεύτερο επίπεδο, του αθροιστή υπολοίπου n
-δυαδικών ψηφίων είναι ίσο με το κρατούμενο εξόδου του στο πρώτο επίπεδο, που είναι 
-χωρίς κρατούμενο εισόδου, $c_{-1} = G_{n-1}$, άρα ισχύει και 
+Όπως εξηγήθηκε προηγουμένως, το κρατούμενο εισόδου στο δεύτερο επίπεδο του αθροιστή υπολοίπου n
+δυαδικών ψηφίων είναι ίσο με το κρατούμενο εξόδου του στο πρώτο επίπεδο. Αντίστοιχα το κρατούμενο εξόδου του πρώτου επιπέδου είναι 
+χωρίς κρατούμενο εισόδου, $c*_{-1} = G_{n-1}$, άρα ισχύει και 
 $(G^*_{-1},P^*_{-1}) = (G_{n-1},P_{n-1})$, συμβολίζοντας $G^*$ τα κρατούμενα που υπολογίζονται 
 στο δεύτερο επίπεδο.\\\\
 % Proof
